fjord-compiler/test/errors/TooManyParameters4.fj
module test.errors.TooManyParameters4

record Zero
  zero : Int

implicit
zeroInstance : Zero
zeroInstance = 
  Zero 0

myFun : implicit Zero -> Int
myFun ev x =
  0
